--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,6 +51,8 @@ jobs:
         key: v1-npm-deps-{{ checksum "web/ui/react-app/yarn.lock" }}
         paths:
         - web/ui/react-app/node_modules
+    - store_test_results:
+        path: test-results
   test_windows:
     executor: win/default
     working_directory: /go/src/github.com/prometheus/prometheus
