--- a/config/testdata/remote_read_dup.bad.yml
+++ b/config/testdata/remote_read_dup.bad.yml
@@ -1,5 +1,5 @@
 remote_read:
   - url: http://localhost:9090
-    write_job_name: queue1
+    name: queue1
   - url: localhost:9091
-    write_job_name: queue1
+    name: queue1
