Include tsdb tool in builds (#6085)
Add the tsdb tool to promu so that it's included in the release
tarballs.

Signed-off-by: Ben Kochie <superq@gmail.com>
Signed-off-by: fuling <fuling.lgz@alibaba-inc.com>

--- a/.promu.yml
+++ b/.promu.yml
@@ -10,6 +10,8 @@ build:
           path: ./cmd/prometheus
         - name: promtool
           path: ./cmd/promtool
+        - name: tsdb
+          path: ./tsdb/cmd/tsdb
     flags: -mod=vendor -a -tags netgo
     ldflags: |
         -X github.com/prometheus/common/version.Version={{.Version}}
