fix syntax error in config test
Signed-off-by: Grebennikov Roman <grv@dfdx.me>

--- a/config/testdata/kubernetes_selectors.good.yml
+++ b/config/testdata/kubernetes_selectors.good.yml
@@ -2,7 +2,7 @@ scrape_configs:
   - job_name: prometheus
     kubernetes_sd_configs:
       - role: endpoints
-        selector:
+        selectors:
           pod:
             label: "foo=bar"
             field: "metadata.status=Running"
