Fix npm license tarball path for promu
Signed-off-by: Julius Volz <julius.volz@gmail.com>

--- a/.promu.yml
+++ b/.promu.yml
@@ -26,7 +26,7 @@ tarball:
         - documentation/examples/prometheus.yml
         - LICENSE
         - NOTICE
-        - web/ui/react-app/npm_licenses.tar.bz2
+        - npm_licenses.tar.bz2
 crossbuild:
     platforms:
         - linux/amd64
