Separate react-app-tests target, but run it from CI
Signed-off-by: Julius Volz <julius.volz@gmail.com>

--- a/Makefile.common
+++ b/Makefile.common
@@ -109,7 +109,7 @@ endif
 %: common-% ;
 
 .PHONY: common-all
-common-all: precheck style check_license lint unused build test
+common-all: precheck style check_license lint unused build test react-app-test
 
 .PHONY: common-style
 common-style:
