[ENHANCEMENT] remote storage: http json implementation of labelvalues
Signed-off-by: fuling <fuling.lgz@alibaba-inc.com>

--- a/config/testdata/conf.good.yml
+++ b/config/testdata/conf.good.yml
@@ -27,6 +27,7 @@ remote_read:
   - url: http://remote1/read
     read_recent: true
   - url: http://remote3/read
+    labal_values_url: http://remote3/labalvalues
     read_recent: false
     required_matchers:
       job: special
