--- a/web/ui/react-app/package.json
+++ b/web/ui/react-app/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^16.8.2",
     "@types/react-dom": "^16.8.0",
     "@types/react-resize-detector": "^3.1.0",
+    "@types/sanitize-html": "^1.20.2",
     "bootstrap": "^4.2.1",
     "downshift": "^3.2.2",
     "flot": "^2.1.6",
@@ -28,6 +29,7 @@
     "react-resize-detector": "^3.4.0",
     "react-scripts": "^2.1.5",
     "reactstrap": "^7.1.0",
+    "sanitize-html": "^1.20.1",
     "tempusdominus-bootstrap-4": "^5.1.2",
     "tempusdominus-core": "^5.0.3",
     "typescript": "^3.3.3"
