React UI: Sanitize HTML string to allow only supported elements (#6165)
* Add component to sanitize html

Signed-off-by: Ritesh Shrivastav <ritesh.conf@gmail.com>

* Use SanitizeHTML component to allow only supported elements

Signed-off-by: Ritesh Shrivastav <ritesh.conf@gmail.com>

* Add allowedTags props in SanitizeHTML component

Signed-off-by: Ritesh Shrivastav <ritesh.conf@gmail.com>

--- a/web/ui/react-app/package.json
+++ b/web/ui/react-app/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^12.11.1",
     "@types/react": "^16.8.2",
     "@types/react-dom": "^16.8.0",
+    "@types/sanitize-html": "^1.20.2",
     "@types/react-resize-detector": "^4.0.2",
     "bootstrap": "^4.2.1",
     "downshift": "^3.2.2",
@@ -25,6 +26,7 @@
     "popper.js": "^1.14.3",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "sanitize-html": "^1.20.1",
     "react-resize-detector": "^4.2.1",
     "react-scripts": "^3.2.0",
     "reactstrap": "^8.0.1",
