--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -82,7 +82,7 @@ workflows:
         filters:
           branches:
             only: master
-        image: circleci/golang-node
+        image: circleci/golang:1-node
     - prometheus/publish_release:
         context: org-context
         requires:
@@ -93,7 +93,7 @@ workflows:
             only: /^v[0-9]+(\.[0-9]+){2}(-.+|[^-.]*)$/
           branches:
             ignore: /.*/
-        image: circleci/golang-node
+        image: circleci/golang:1-node
   nightly:
     triggers:
       - schedule:
