migrate query history
Signed-off-by: blalov <boyko.lalov@tick42.com>

--- a/web/ui/react-app/package.json
+++ b/web/ui/react-app/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.14",
+    "@fortawesome/free-regular-svg-icons": "^5.7.1",
     "@fortawesome/free-solid-svg-icons": "^5.7.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@types/jest": "^24.0.4",
@@ -11,8 +12,8 @@
     "@types/node": "^12.11.1",
     "@types/react": "^16.8.2",
     "@types/react-dom": "^16.8.0",
-    "@types/sanitize-html": "^1.20.2",
     "@types/react-resize-detector": "^4.0.2",
+    "@types/sanitize-html": "^1.20.2",
     "bootstrap": "^4.2.1",
     "downshift": "^3.2.2",
     "flot": "^3.2.13",
@@ -26,10 +27,10 @@
     "popper.js": "^1.14.3",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "sanitize-html": "^1.20.1",
     "react-resize-detector": "^4.2.1",
     "react-scripts": "^3.2.0",
     "reactstrap": "^8.0.1",
+    "sanitize-html": "^1.20.1",
     "tempusdominus-bootstrap-4": "^5.1.2",
     "tempusdominus-core": "^5.0.3",
     "typescript": "^3.3.3"
