--- a/web/ui/react-app/package.json
+++ b/web/ui/react-app/package.json
@@ -6,9 +6,11 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.14",
     "@fortawesome/free-solid-svg-icons": "^5.7.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "@reach/router": "^1.2.1",
     "@types/jest": "^24.0.4",
     "@types/jquery": "^3.3.29",
     "@types/node": "^12.11.1",
+    "@types/reach__router": "^1.2.6",
     "@types/react": "^16.8.2",
     "@types/react-dom": "^16.8.0",
     "@types/react-resize-detector": "^4.0.2",
