--- a/web/ui/react-app/package.json
+++ b/web/ui/react-app/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^12.11.1",
     "@types/reach__router": "^1.2.6",
     "@types/react": "^16.8.2",
+    "@types/react-copy-to-clipboard": "^4.3.0",
     "@types/react-dom": "^16.8.0",
     "@types/react-resize-detector": "^4.0.2",
     "@types/sanitize-html": "^1.20.2",
@@ -27,6 +28,7 @@
     "moment-timezone": "^0.5.23",
     "popper.js": "^1.14.3",
     "react": "^16.7.0",
+    "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.7.0",
     "react-resize-detector": "^4.2.1",
     "react-scripts": "^3.2.0",
