--- a/web/ui/react-app/package.json
+++ b/web/ui/react-app/package.json
@@ -15,6 +15,7 @@
     "@types/react-copy-to-clipboard": "^4.3.0",
     "@types/react-dom": "^16.8.0",
     "@types/react-resize-detector": "^4.0.2",
+    "@types/react-test-renderer": "^16.9.1",
     "@types/sanitize-html": "^1.20.2",
     "bootstrap": "^4.2.1",
     "downshift": "^3.2.2",
@@ -32,6 +33,7 @@
     "react-dom": "^16.7.0",
     "react-resize-detector": "^4.2.1",
     "react-scripts": "^3.2.0",
+    "react-test-renderer": "^16.11.0",
     "reactstrap": "^8.0.1",
     "sanitize-html": "^1.20.1",
     "tempusdominus-bootstrap-4": "^5.1.2",
