--- a/web/ui/react-app/package.json
+++ b/web/ui/react-app/package.json
@@ -15,10 +15,10 @@
     "@types/react-copy-to-clipboard": "^4.3.0",
     "@types/react-dom": "^16.8.0",
     "@types/react-resize-detector": "^4.0.2",
-    "@types/react-test-renderer": "^16.9.1",
     "@types/sanitize-html": "^1.20.2",
     "bootstrap": "^4.2.1",
     "downshift": "^3.2.2",
+    "enzyme-to-json": "^3.4.3",
     "flot": "^3.2.13",
     "fuzzy": "^0.1.3",
     "i": "^0.3.6",
@@ -33,7 +33,6 @@
     "react-dom": "^16.7.0",
     "react-resize-detector": "^4.2.1",
     "react-scripts": "^3.2.0",
-    "react-test-renderer": "^16.11.0",
     "reactstrap": "^8.0.1",
     "sanitize-html": "^1.20.1",
     "tempusdominus-bootstrap-4": "^5.1.2",
@@ -85,5 +84,10 @@
     "prettier": "^1.18.2",
     "sinon": "^7.5.0"
   },
-  "proxy": "http://localhost:9090"
+  "proxy": "http://localhost:9090",
+  "jest": {
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ]
+  }
 }
