--- a/web/ui/react-app/package.json
+++ b/web/ui/react-app/package.json
@@ -7,6 +7,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.7.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@reach/router": "^1.2.1",
+    "@testing-library/react-hooks": "^3.1.1",
     "@types/jest": "^24.0.20",
     "@types/jquery": "^3.3.29",
     "@types/node": "^12.11.1",
@@ -22,6 +23,7 @@
     "flot": "^3.2.13",
     "fuzzy": "^0.1.3",
     "i": "^0.3.6",
+    "jest-fetch-mock": "^2.1.2",
     "jquery": "^3.3.1",
     "jquery.flot.tooltip": "^0.9.0",
     "jsdom": "^15.2.0",
@@ -33,6 +35,7 @@
     "react-dom": "^16.7.0",
     "react-resize-detector": "^4.2.1",
     "react-scripts": "^3.2.0",
+    "react-test-renderer": "^16.9.0",
     "reactstrap": "^8.0.1",
     "sanitize-html": "^1.20.1",
     "tempusdominus-bootstrap-4": "^5.1.2",
