--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@ benchmark.txt
 !/.golangci.yml
 /documentation/examples/remote_storage/remote_storage_adapter/remote_storage_adapter
 /documentation/examples/remote_storage/example_write_adapter/example_writer_adapter
+.build/linux-amd64/prometheus
+.build/linux-amd64/promtool
