Remove Travis as a CI platform
It's currently causing weird unknown problems in React tests that run
successfully everywhere else, and by now all the tests that run on
Travis also run on CircleCI, so Travis is not needed anymore.

Signed-off-by: Julius Volz <julius.volz@gmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ orbs:
   go: circleci/go@0.2.0
 
 executors:
-  # Whenever the Go version is updated here, .travis.yml and .promu.yml
+  # Whenever the Go version is updated here, .promu.yml
   # should also be updated.
   golang:
     docker:
