--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,7 +56,7 @@ jobs:
     steps:
     - prometheus/setup_environment
     - attach_workspace:
-        at: /build/prometheus
+        at: /build
     - run:
         command: make integration-test
         environment:
