--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,10 +39,11 @@ jobs:
           # don't limit this to the number of allocated cores, the job is
           # likely to get OOMed and killed.
           GOOPTS: "-p 2"
-          GOMAXPROCS: "2"
     - run:
         command: make integration-test
-        environment: *GoEnv
+        environment:
+          <<: [*GoEnv]
+          GOMAXPROCS: "4"
     - prometheus/check_proto
     - prometheus/store_artifact:
         file: prometheus
