--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,8 +1,8 @@
 blank_issues_enabled: false
 contact_links:
-  - name: Users Mailing List
+  - name: Users mailing list
     url: https://groups.google.com/forum/#!forum/prometheus-users
     about: Please ask and answer usage questions here.
-  - name: Prometheus Community
+  - name: Prometheus community
     url: https://prometheus.io/community/
     about: List of communication channels for the Prometheus community.
