discovery/kubernetes: expose label_selector and field_selector
Close #6807

Co-authored-by @shuttie
Signed-off-by: Aleksandra Gacek <algacek@google.com>

--- a/config/testdata/kubernetes_selectors_endpoints.good.yml
+++ b/config/testdata/kubernetes_selectors_endpoints.good.yml
@@ -3,12 +3,12 @@ scrape_configs:
     kubernetes_sd_configs:
       - role: endpoints
         selectors:
-          pod:
-            label: "foo=bar"
-            field: "metadata.status=Running"
-          service:
-            label: "foo=bar"
-            field: "metadata.status=Running"
-          endpoints:
-            label: "foo=bar"
-            field: "metadata.status=Running"
+        - role: "pod"
+          label: "foo=bar"
+          field: "metadata.status=Running"
+        - role: "service"
+          label: "foo=bar"
+          field: "metadata.status=Running"
+        - role: "endpoints"
+          label: "foo=bar"
+          field: "metadata.status=Running"
