--- a/config/testdata/kubernetes_selectors_node.bad.yml
+++ b/config/testdata/kubernetes_selectors_node.bad.yml
@@ -3,6 +3,6 @@ scrape_configs:
     kubernetes_sd_configs:
       - role: node
         selectors:
-          pod:
+          - role:  "pod"
             label: "foo=bar"
             field: "metadata.status=Running"
