--- a/config/testdata/kubernetes_selectors_pod.bad.yml
+++ b/config/testdata/kubernetes_selectors_pod.bad.yml
@@ -3,6 +3,6 @@ scrape_configs:
     kubernetes_sd_configs:
       - role: pod
         selectors:
-          node:
+          - role:  "node"
             label: "foo=bar"
             field: "metadata.status=Running"
