--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,6 +54,7 @@ jobs:
         - /home/circleci/.cache/yarn
     - store_test_results:
         path: test-results
+
   test_windows:
     executor: win/default
     working_directory: /go/src/github.com/prometheus/prometheus
@@ -72,6 +73,26 @@ jobs:
         environment:
           GOGC: "20"
           GOOPTS: "-p 2 -mod=vendor"
+
+  test_mixins:
+    docker:
+    - image: quay.io/coreos/jsonnet-ci:release-0.37
+    steps:
+    - checkout
+    - run: go install -mod=vendor ./cmd/promtool/.
+    - run:
+        command: make clean
+        working_directory: ~/project/documentation/prometheus-mixin
+    - run:
+        command: jb install
+        working_directory: ~/project/documentation/prometheus-mixin
+    - run:
+        command: make
+        working_directory: ~/project/documentation/prometheus-mixin
+    - run:
+        command: git diff --exit-code
+        working_directory: ~/project/documentation/prometheus-mixin
+
   fuzzit_regression:
     executor: fuzzit
     working_directory: /go/src/github.com/prometheus/prometheus
@@ -79,6 +100,7 @@ jobs:
       - checkout
       - setup_remote_docker
       - run: ./fuzzit.sh local-regression
+
   fuzzit_fuzzing:
     executor: fuzzit
     working_directory: /go/src/github.com/prometheus/prometheus
@@ -98,6 +120,10 @@ workflows:
   prometheus:
     jobs:
     - test:
+        filters:
+          tags:
+            only: /.*/
+    - test_mixins:
         filters:
           tags:
             only: /.*/
