[ui] service discovery : Add Alertmanager service discovery to Service Discovery WebUI Signed-off-by: fuling fuling.lgz@alibaba-inc.com
Signed-off-by: fuling <fuling.lgz@alibaba-inc.com>

--- a/documentation/examples/prometheus-sd-alertmanager.yml
+++ b/documentation/examples/prometheus-sd-alertmanager.yml
@@ -21,24 +21,10 @@ alerting:
 # Here it's Prometheus itself.
 scrape_configs:
   # The job name is added as a label `job=<job_name>` to any timeseries scraped from this config.
-  - job_name: 'prometheus-arms'
+  - job_name: 'prometheus'
 
     # metrics_path defaults to '/metrics'
     # scheme defaults to 'http'.
 
     static_configs:
     - targets: ['localhost:9090']
-  - job_name: 'prometheus-buy2'
-
-    # metrics_path defaults to '/metrics'
-    # scheme defaults to 'http'.
-
-    static_configs:
-      - targets: ['localhost:9090']
-  - job_name: 'prometheus-eagleeye'
-
-    # metrics_path defaults to '/metrics'
-    # scheme defaults to 'http'.
-
-    static_configs:
-      - targets: ['localhost:9090']
