--- a/.github/workflows/funcbench.yml
+++ b/.github/workflows/funcbench.yml
@@ -27,18 +27,16 @@ jobs:
         --data '{"state":"pending","context":"funcbench-status","target_url":"'$GITHUB_STATUS_TARGET_URL'"}'
         "https://api.github.com/repos/$GITHUB_REPOSITORY/statuses/$LAST_COMMIT_SHA"
     - name: Prepare nodepool
-      uses: docker://prominfra/prombench:master
+      uses: docker://prominfra/funcbench:master
       with:
-        args: make funcbench_nodepool_create
-    - name: Run funcbench
-      uses: docker://prominfra/prombench:master
-      with:
-        args: make funcbench_resource_apply
+        entrypoint: 'docker_entrypoint'
+        args: make deploy
     - name: Delete all resources
       if: always()
-      uses: docker://prominfra/prombench:master
+      uses: docker://prominfra/funcbench:master
       with:
-        args: make funcbench_resource_delete; make funcbench_nodepool_delete
+        entrypoint: 'docker_entrypoint'
+        args: make clean
     - name: Update status to failure
       if: failure()
       run: >-
