--- a/config/testdata/eureka_no_servers.bad.yml
+++ b/config/testdata/eureka_no_servers.bad.yml
@@ -1,10 +1,5 @@
-# my global config
-global:
-  scrape_interval:     15s
-  evaluation_interval: 30s
-
 scrape_configs:
 
-- job_name: service-eureka
+- job_name: eureka
   eureka_sd_configs:
   - servers:
