--- a/documentation/examples/prometheus-eureka.yml
+++ b/documentation/examples/prometheus-eureka.yml
@@ -1,60 +1,68 @@
-# A example scrape configuration for running Prometheus on a Marathon
-# (or DC/OS) cluster.
+# A example scrape configuration for running Prometheus on a Eureka
 
 scrape_configs:
-  
+
   # Make Prometheus scrape itself for metrics.
   - job_name: 'prometheus'
     static_configs:
-    - targets: ['localhost:9090']
+      - targets: ['localhost:9090']
 
-  # Discover Marathon services to scrape.
-  - job_name: 'marathon'
+  # Discover Eureka services to scrape.
+  - job_name: 'eureka'
 
-    # Scrape Marathon itself to discover new services every minute.
-    marathon_sd_configs:
+    # Scrape Eureka itself to discover new services every minute.
+    eureka_sd_configs:
       - servers:
-        - http://marathon.mesos:8080
+          - http://localhost:8761/eureka
         refresh_interval: 60s
 
     relabel_configs:
-
-      # Only scrape targets that have a port label called 'metrics' specified on a port
-      # in their app definitions. Example using a port mapping (container or bridge networking):
+      # You can use Eureka's application instance metadata.
+      # If you are using SpringBoot, you can add metadata using eureka.instance.metadataMap like this:
+      # application.yaml (spring-boot)
+      # eureka:
+      #  instance:
+      #    metadataMap:
+      #      "prometheus.scrape": "true"
+      #      "prometheus.path": "/actuator/prometheus"
+      #      "prometheus.port": "8080"
       #
-      #  "portMappings": [
-      #    {
-      #      "containerPort": 9091,
-      #      "name": "prometheus",
-      #      "labels": {
-      #        "metrics": "/metrics"
-      #      }
-      #    }
-      #  ]
       #
-      # Or, in case your service uses host networking, using a port definition:
+      # Example relabel to scrape only application that have
+      # "prometheus.scrape = true" metadata.
+      #  - source_labels: [__meta_eureka_app_instance_metadata_prometheus_scrape]
+      #    action: keep
+      #    regex: true
       #
-      #  "portDefinitions" : [
-      #    {
-      #      "port" : 9091,
-      #      "name" : "prometheus",
-      #      "labels": {
-      #        "metrics": "/metrics"
-      #      }
-      #    }
-      #  ]
-
-      # Match a slash-prefixed string either in a portMapping or a portDefinition label.
-      - source_labels: [__meta_marathon_port_mapping_label_metrics,__meta_marathon_port_definition_label_metrics]
-        regex: (\/.+;|;\/.+)
-        action: keep
-
-      # If a portMapping 'metrics' label is set, use the label value as the URI to scrape.
-      - source_labels: [__meta_marathon_port_mapping_label_metrics]
-        regex: (\/.+)
-        target_label: __metrics_path__
-      
-      # If a portDefinition 'metrics' label is set, use the label value as the URI to scrape.
-      - source_labels: [__meta_marathon_port_definition_label_metrics]
-        regex: (\/.+)
-        target_label: __metrics_path__
+      # application.yaml (spring-boot)
+      # eureka:
+      #  instance:
+      #    metadataMap:
+      #
+      #
+      # Example relabel to customize metric path based on application
+      # "prometheus.path = <metric path>" annotation.
+      #  - source_labels: [__meta_eureka_app_instance_metadata_prometheus_path]
+      #    action: replace
+      #    target_label: __metrics_path__
+      #    regex: (.+)
+      #
+      # application.yaml (spring-boot)
+      # eureka:
+      #  instance:
+      #    metadataMap:
+      #      "prometheus.path": "/actuator/prometheus"
+      #
+      # Example relabel to scrape only single, desired port for the application
+      # based on application "prometheus.port = <port>" metadata.
+      #  - source_labels: [__address__, __meta_eureka_app_instance_metadata_prometheus_port]
+      #    action: replace
+      #    regex: ([^:]+)(?::\d+)?;(\d+)
+      #    replacement: $1:$2
+      #    target_label: __address__
+      #
+      # application.yaml (spring-boot)
+      # eureka:
+      #  instance:
+      #    metadataMap:
+      #      "prometheus.port": "8080"
