Squashed commit of the following:
commit cee7de274a4078d609f1d1e0d7d94aafd84c3e2d
Author: kangwoo <kangwoo@gmail.com>
Date:   Mon Aug 3 10:37:42 2020 +0900

    Change to limit to one server (#2)

    * Change to limit to one server

    Signed-off-by: kangwoo <kangwoo@gmail.com>

    * Change to limit to one server

commit ff0fb8ada04e90bd54707ff1ec0a69d5decc7414
Author: kangwoo <kangwoo@gmail.com>
Date:   Sat Aug 1 08:47:52 2020 +0900

    Remove presentValue in eureka

    Signed-off-by: kangwoo <kangwoo@gmail.com>

commit d2d391e1c971c1f8501a35d41c2b4e6dc66f6a33
Author: kangwoo <kangwoo@gmail.com>
Date:   Sat Aug 1 08:28:46 2020 +0900

    Fix marthon to eureka

    Signed-off-by: kangwoo <kangwoo@gmail.com>

commit ef4c6812ed9aff9291002c478424015407ee8a03
Author: kangwoo <kangwoo@gmail.com>
Date:   Sat Aug 1 08:24:24 2020 +0900

    Apply testutil

    Signed-off-by: kangwoo <kangwoo@gmail.com>

commit 1b2084e3af37fb4b4353183241d16cb78115b709
Author: kangwoo <kangwoo@gmail.com>
Date:   Sat Aug 1 07:59:54 2020 +0900

    Delete appInstanceMetadataPresentPrefix in eurekaSD

    Signed-off-by: kangwoo <kangwoo@gmail.com>

commit 6fdf66c3e09ab8247f890d235d494766a5578029
Author: kangwoo <kangwoo@gmail.com>
Date:   Sat Aug 1 07:32:54 2020 +0900

    Apply PR suggestions

    Signed-off-by: kangwoo <kangwoo@gmail.com>

commit b3e4bcf30c9e4d493865bc6c3eb44ab002350fe0
Author: kangwoo <kangwoo@gmail.com>
Date:   Sat Aug 1 05:37:00 2020 +0900

    Remove json marshaller

    Signed-off-by: kangwoo <kangwoo@gmail.com>

commit 15b58a1a80e5d5b3c7de679fd531395df3b2aba1
Author: kangwoo <kangwoo@gmail.com>
Date:   Fri Jul 31 20:48:23 2020 +0900

    Fix TestFetchApps

    Signed-off-by: kangwoo <kangwoo@gmail.com>

commit 03af6e4bd7fb2d7aa71ee668bae12fa5fc5337ce
Author: kangwoo <kangwoo@gmail.com>
Date:   Fri Jul 31 20:32:11 2020 +0900

    Fixe lint error.

    Signed-off-by: kangwoo <kangwoo@gmail.com>

commit 184c34a87b2ab3534bf69be8f69510ad547dab51
Author: kangwoo <kangwoo@

--- a/config/testdata/conf.good.yml
+++ b/config/testdata/conf.good.yml
@@ -288,6 +288,10 @@ scrape_configs:
         username: abcdef
         password: abcdef
 
+- job_name: service-eureka
+  eureka_sd_configs:
+    - server: 'http://eureka.example.com:8761/eureka'
+
 alerting:
   alertmanagers:
   - scheme: https
