Apply PR reviews
Signed-off-by: kangwoo <kangwoo@gmail.com>

--- a/documentation/examples/prometheus-eureka.yml
+++ b/documentation/examples/prometheus-eureka.yml
@@ -1,4 +1,4 @@
-# A example scrape configuration for running Prometheus on a Eureka
+# A example scrape configuration for running Prometheus with Eureka.
 
 scrape_configs:
 
